# Project-Kallipolis

./: .gitignore  LICENSE  README.md  analysis.ipynb  crisis.py  kallipolis_logs.jsonl  main.py  pyproject.toml  simulator.py
logs/: kallipolis_logs_20251127_165651.jsonl  kallipolis_logs_20251127_172455.jsonl  kallipolis_logs_20251128_182755.jsonl  kallipolis_logs_20251128_184802.jsonl  kallipolis_logs_20251128_185525.jsonl  kallipolis_logs_20251130_092932.jsonl  kallipolis_logs_20251130_093419.jsonl  kallipolis_logs_20251130_093948.jsonl  kallipolis_logs_20251130_094419.jsonl  kallipolis_logs_20251130_095056.jsonl  kallipolis_logs_20251130_095650.jsonl  kallipolis_logs_20251130_100159.jsonl  kallipolis_logs_20251130_101932.jsonl  kallipolis_logs_20251130_103039.jsonl  kallipolis_logs_20251130_104420.jsonl  kallipolis_logs_20251130_105505.jsonl  kallipolis_logs_20251130_110046.jsonl
logs2/: kallipolis_logs_20251203_120418.jsonl  kallipolis_logs_20251203_120741.jsonl  kallipolis_logs_20251203_121723.jsonl  kallipolis_logs_20251203_121905.jsonl  kallipolis_logs_20251203_122036.jsonl  kallipolis_logs_20251203_122713.jsonl  kallipolis_logs_20251203_123444.jsonl  kallipolis_logs_20251203_125336.jsonl  kallipolis_logs_20251203_125515.jsonl  kallipolis_logs_20251203_130032.jsonl  kallipolis_logs_20251203_130453.jsonl  kallipolis_logs_20251203_142633.jsonl
